# web_MYCV/Controllers/HttpControllerAttribute.cs
@@ -1,0 +1,8 @@
+﻿using System;
+
+namespace MyCV.html.Controllers
+{
+    internal class HttpControllerAttribute : Attribute
+    {
+    }
+}
